@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="ftw.mail.mail">
+
+    <property name="behaviors" purge="False">
+        <element value="plone.app.referenceablebehavior.referenceable.IReferenceable" />
+    </property>
+
+</object>
